cluster/kubernetes/network/gateways/external/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  # addresses:
  #   - value: 10.10.30.80
  listeners:
    # catch all external http -> https
    - name: http-redirect-external
      hostname: "*.cjsolsen.com"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    # # catch traffic for kromgo
    # - name: kromgo
    #   hostname: kromgo.cjsolsen.com
    #   protocol: HTTPS
    #   port: 443
    #   allowedRoutes:
    #     namespaces:
    #       from: Same
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: kromgo-cjsolsen-com
